# trans-arxiv-bot

./: .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: lib.rs  main.rs  opts.rs
src/arxiv_lib/: fetch_info.rs  mod.rs
src/fetch_arxiv/: fetch_arxiv.rs  latest_published_time.rs  mod.rs
src/translater/: mod.rs  translate.rs
src/twitter/: client.rs
tests/: test.rs
