[package]
name = "trans-arxiv-bot"
version = "0.1.1"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "A Twitter bot that tweets translated arXiv paper summaries"
repository = "https://github.com/moisutsu/trans-arxiv-bot"
license = "MIT"
readme = "README.md"
# see https://crates.io/category_slugs
categories = ["command-line-utilities"]
# see https://crates.io/keywords
keywords = ["cli", "twitter", "bot"]

[dependencies]
kuon = "0.0.22"
arxiv-rs = "0.1.3"
tokio = { version = "1.3.0", features = ["full"] }
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
